Fri Sep 24 12:28:04 2004  Carlos O'Ryan  <coryan@atdesk.com>

	* tests/Sequence_Unit_Tests/string_sequence_element.hpp:
	* tests/Sequence_Unit_Tests/unbounded_string_sequence.hpp:
	  Changed the template parameter on the string_sequence_element
	  from charT to the string_traits.  With this change the
	  "string_sequence_element" no longer depends on the "string"
	  aspect, with suitable traits it works for object references too!
	  Also, because all the types depend on the template parameter I
	  have some hope of working around the MSVC6 bugs.

	* tests/Sequence_Unit_Tests/bounded_value_sequence_ut.cpp:
	* tests/Sequence_Unit_Tests/string_sequence_element_ut.cpp:
	* tests/Sequence_Unit_Tests/testing_allocation_traits_ut.cpp:
	* tests/Sequence_Unit_Tests/unbounded_string_sequence_ut.cpp:
	* tests/Sequence_Unit_Tests/unbounded_value_sequence_ut.cpp:
	* tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
	  Changed the unit tests so they would compile with boost-1.30.2

Fri Sep 24 11:25:18 2004  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:
        * tests/Sequence_Unit_Tests/bounded_value_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/string_sequence_element_ut.cpp:
        * tests/Sequence_Unit_Tests/testing_allocation_traits_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_value_sequence_ut.cpp:

          Removed the #if 0'ed main() from these cpp files and added exename
          settings to the necessary projects in the mpc file.

Fri Sep 24 11:13:30 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Sequence_Unit_Tests/allocation_traits.hpp:

          Changed line with reinterpret_cast<> in
          unbounded_reference_allocation_traits::allocbuf() to be
          more palatable for MSVC 7.1. Thanks to Carlos O'Ryan
          <coryan@atdesk.com> for the replacement line.
